test/bad/lambdas/call02.px

f: Int->Int = _
f(1, 2)
